--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/dradetsky/docset.git"
   },
   "bugs": {
-    "url": "https://github.com/dradetsky/docset/issues",
-  }
+    "url": "https://github.com/dradetsky/docset/issues"
+  },
   "dependencies": {
     "better-sqlite3": "^5.4.0",
     "sql-bricks-sqlite": "^0.1.0"
